--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -286,7 +286,11 @@ canvas {
   }
 
   .Diamond {
-    background-color: #dc3545;
+    background-color: #9395;
+  }
+  .Diamonds{
+    background-color: #939506;
+
   }
 
 
