--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -85,7 +85,7 @@
         <input type="email" class="form-control" formControlName="email" placeholder="Email" required>
       </div>
     
-      <button type="submit" class="btn btn-primary w-100">Send OTP</button>
+      <button type="submit" class="btn btn-primary w-100">Send to Email</button>
       <button type="button" class="btn btn-link w-100 mt-2" (click)="backToLogin()">Back to Login</button>
     
       <!-- Alert messages -->
