--- a/src/app/transfer/transfer.component.html
+++ b/src/app/transfer/transfer.component.html
@@ -18,6 +18,12 @@
               <th class="fw-bold">Date</th>
               <th class="fw-bold">Amount</th>
             </tr>
+            <tr *ngIf="sPaginatedData.length === 0">
+              <td colspan="6" class="text-center text-danger fw-bold">
+                No data is available
+              </td>
+            </tr>
+
           </thead>
           <tbody>
             <tr></tr>
@@ -113,7 +119,7 @@
               <textarea class="form-control" formControlName="remarks" id="exampleFormControlTextarea1" rows="2" style="border-radius: 16px; font-size: 25px;"></textarea>
             </div> -->
           <p class=" fw-bold " *ngIf="pffdata"> Balance: <span>{{pffdata.walletamount |
-            currency:'USD':true:'1.0-1'}}</span> </p>
+            currency:'USD':true:'1.0-2'}}</span> </p>
         </div>
         <div class="modal-footer d-flex justify-content-between">
           <button type="button" class="btn btn-primary" data-bs-dismiss="modal" style="border-radius: 16px;" (click)="SelfTransfer()">Transfer
@@ -158,7 +164,7 @@
               <textarea class="form-control" id="exampleFormControlTextarea1" rows="2" style="border-radius: 16px; font-size: 25px;"></textarea>
             </div> -->
           <p class=" fw-bold "> Balance: <span >{{pffdata.actwallet |
-              currency:'USD':true:'1.0-1'}}</span></p>
+              currency:'USD':true:'1.0-2'}}</span></p>
         </div>
         <div class="modal-footer d-flex justify-content-between">
         <button type="button" class="btn btn-primary"  [disabled]="errorMessage" style="border-radius: 16px;" data-bs-dismiss="modal"
