--- a/src/app/layout/layout/layout.component.html
+++ b/src/app/layout/layout/layout.component.html
@@ -72,6 +72,8 @@
       <li class="nav-item"><a class="nav-link" routerLink="/withdraw" (click)="handleNavigation()">Withdraw Funds</a></li>
       <li class="nav-item"><a class="nav-link" routerLink="/transfer" (click)="handleNavigation()">Transfer Funds</a></li>
       <li class="nav-item"><a class="nav-link" routerLink="/recieved" (click)="handleNavigation()">Received Funds</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="/upgradetransfer" (click)="handleNavigation()"> Transfer upgrade Funds</a></li>
+
     </ul>
   </div>
 </div>
