--- a/src/app/company-dasboard/company-dasboard.component.html
+++ b/src/app/company-dasboard/company-dasboard.component.html
@@ -2,6 +2,7 @@
   
     <div class="row g-3">
       <div class="col-md-3" *ngFor="let item of [
+          {title: 'Total Users', value: (dashboardData.activeusers || 0) + (dashboardData.inactiveusers || 0)},
           {title: 'Active Users', value: dashboardData.activeusers},
           {title: 'Inactive Users', value: dashboardData.inactiveusers},
           {title: 'Today Active', value: dashboardData.todayactiveusers},
@@ -24,11 +25,12 @@
         </div>
       </div>
     </div>
+    
   
     <hr class="my-4">
   
-    <h4 class="mb-3 fw-bold">💸 Withdraw Users</h4>
-    <div class="container-fluid mt-3">
+    <!-- <h4 class="mb-3 fw-bold">💸 Withdraw Users</h4> -->
+    <!-- <div class="container-fluid mt-3">
       <div class="transaction-table">
         <div class="table-responsive">
           <table class="table  align-middle text-nowrap">
@@ -60,47 +62,128 @@
           </table>
         </div>
       </div>
-    </div>
+    </div> -->
   
-    <ng-template #noData>
+    <!-- <ng-template #noData>
       <p class="text-muted">No withdraw requests available.</p>
-    </ng-template>
-<!--  -->
+    </ng-template> -->
   <h4 class="mb-3 fw-bold mx-3">Total Users</h4>
 
   <div class="container-fluid mt-3">
     <div class="transaction-table">
       <div class="table-responsive">
-        <table class="table  align-middle text-nowrap">
+        <table class="table align-middle text-nowrap">
           <thead>
             <tr>
               <th>S.no</th>
-
               <th>Date</th>
               <th>Registration ID</th>
               <th>Name</th>
-              <th>position</th>
+              <th>Position</th>
+              <th>Edit</th>
             </tr>
+          </thead>
           <tbody>
-            <tr *ngFor="let item of tuser.data; let i = index">
+            <tr *ngFor="let item of tuser?.data; let i = index">
               <td>{{ i + 1 }}</td>
               <td>{{ item.cdate }}</td>
               <td>{{ item.regid }}</td>
               <td>{{ item.name }}</td>
               <td>{{ item.position }}</td>
-            </tr>
-          
-            <tr *ngIf="noData">
-              <td colspan="6" class="text-center text-danger fw-bold">
-                No data is available
+              <td (click)="openProfile(item)" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                <i class="fa fa-pencil-square-o" aria-hidden="true" style="color: #0C227D;"></i>
               </td>
             </tr>
           </tbody>
+        
           
         </table>
       </div>
     </div>
   </div>
+  <div class="d-flex justify-content-between mt-3">
+    <button class="btn btn-primary"
+            [disabled]="!tuser?.previouspage"
+            (click)="loadPage(tuser.previouspage)">
+      Previous
+    </button>
+  
+    <button class="btn btn-primary"
+            [disabled]="!tuser?.nextpage"
+            (click)="loadPage(tuser.nextpage)">
+      Next
+    </button>
+  </div>
 
+  <div class="modal fade" id="exampleModal" tabindex="-1">
+    <div class="modal-dialog modal-xl">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Profile Details</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+        <div class="modal-body">
+          <form [formGroup]="profileform">
+            <div class="form-card" *ngIf="pffdata">
+              <h5>Sponsor Details</h5>
+              <div class="row mb-3">
+                <div class="col-md-6">
+                  <label>Sponsor ID</label>
+                  <input type="text" class="form-control" [value]="pffdata.refid" readonly>
+                </div>
+                <div class="col-md-6">
+                  <label>Sponsor Name</label>
+                  <input type="text" class="form-control" [value]="pffdata.name" readonly>
+                </div>
+              </div>
+  
+              <h5 class="mt-4">Basic Details</h5>
+              <div class="row mb-3">
+                <div class="col-md-6">
+                  <label>Name</label>
+                  <input *ngIf="isEdit" type="text" class="form-control" formControlName="name">
+                  <input *ngIf="!isEdit" type="text" class="form-control" [value]="pffdata.name" readonly>
+                </div>
+                <div class="col-md-6">
+                  <label>Email</label>
+                  <input *ngIf="isEdit" type="email" class="form-control" formControlName="email">
+                  <input *ngIf="!isEdit" type="email" class="form-control" [value]="pffdata.email" readonly>
+                </div>
+              </div>
+  
+              <div class="row mb-3">
+                <div class="col-md-6">
+                  <label>Country</label>
+                  <!-- Edit mode -->
+                  <select *ngIf="isEdit" class="form-control" formControlName="country">
+                    <option value="" disabled>Select Country</option>
+                    <option *ngFor="let country of countries" [value]="country">{{ country }}</option>
+                  </select>
+                  <!-- View mode -->
+                  <input *ngIf="!isEdit" type="text" class="form-control" [value]="pffdata.country" readonly>
+                </div>
+  
+                <div class="col-md-6">
+                  <label>Wallet Address (USDT BEP20)</label>
+                  <input *ngIf="isEdit" type="text" formControlName="wallet1" class="form-control">
+                  <input *ngIf="!isEdit" type="text" class="form-control" [value]="pffdata.wallet1" readonly>
+                </div>
+              </div>
+              <div class="text-end">
+                <button class="btn btn-danger me-2" type="button" (click)="edit()" *ngIf="!isEdit">Edit</button>
+                <button class="btn btn-success me-2" type="button"  data-bs-dismiss="modal"  (click)="save()" 
+                        [disabled]="!profileform.valid || !profileform.dirty" *ngIf="isEdit">Save</button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  
 
-  <!--  -->
+  
+  
+  
+
