--- a/src/app/tree-registration/tree-registration.component.html
+++ b/src/app/tree-registration/tree-registration.component.html
@@ -74,9 +74,10 @@
                   <input type="text" formControlName="placementid" [(ngModel)]="this.regid"
                     placeholder="Enter placement ID" class="form-control" readonly>
                 </div>
-                <!-- <div class="text-success mt-1">
+                <div class="text-success mt-1">
                   Placement Name: {{ pffdata.name }}
-                </div> -->
+                </div>
+
                 <!-- <ng-template #noData>
                   <p class="text-danger">
                     {{ errorMessage || 'No registration data available.' }}
