--- a/src/app/tree-view/tree-view.component.html
+++ b/src/app/tree-view/tree-view.component.html
@@ -75,7 +75,7 @@
       <input type="text" pInputText [(ngModel)]="udata.regid" 
              placeholder="Enter User ID" 
              class="flex-grow-1 p-inputtext-sm form-control" />
-      <button class="btn btn-sm btn-danger" (click)="mytree1()">
+      <button class="btn btn-sm btn-danger" (click)="mytree1(udata.regid)">
         <i class="pi pi-search"></i> Submit
       </button>
     </div>
